# oci-umount

./: .dir-locals.el  .gitignore  CODE-OF-CONDUCT.md  Makefile  Makefile.am  README.md  SECURITY.md  configure.ac  oci-systemd-hook.spec  oci-umount-options.conf  oci-umount.conf  oci-umount.json  oci-umount.spec  oci_systemd_hook.spec  state.go  systemdhook.c
doc/: oci-systemd-hook.1.md  oci-umount-options.conf.5.md  oci-umount.1.md  oci-umount.conf.5.md  oci_systemd_hook.1  oci_systemd_hook.1.md
poststop/journalteardown/: journalteardown.go
prestart/journalsetup/: journalsetup.go
src/: oci-umount.c  systemdhook.c
systemd/: systemd.go
