AC_INIT([OCI Umount], 2.3.4)
AC_CONFIG_AUX_DIR([build-aux])
AC_CONFIG_HEADERS([config.h])
AM_INIT_AUTOMAKE([foreign -Wall -Werror subdir-objects])
AC_PROG_CC
AM_PROG_CC_C_O
AC_USE_SYSTEM_EXTENSIONS
AC_SYS_LARGEFILE

PKG_CHECK_MODULES([JANSSON], [jansson >= 2.10])
PKG_CHECK_MODULES([LIBMOUNT], [mount >= 2.23.0])

AC_MSG_CHECKING([whether to disable argument checking])
AC_ARG_ENABLE([args], AS_HELP_STRING([--disable-args], [disable checking that cmd args are either init/umount]))
AS_IF([test "x$enable_args" != "xno"], [AC_DEFINE([ARGS_CHECK], [1], [enable checking arguments])])

AC_CONFIG_FILES(Makefile)
AC_OUTPUT
